package org.example.Scheduler.Constraint;

public interface Constraint
{
    boolean eval();
}
